--- a/molecule/config.yml
+++ b/molecule/config.yml
@@ -1,7 +1,4 @@
 ---
-# molecule_exceptions:
-#   - variation: alpine
-#     reason: "Not idempotent"
 molecule_scenarios:
   - scenario: "default"
     ansible: ["previous", "current", "next"]
@@ -14,15 +11,10 @@ molecule_scenarios:
       - "ubuntu2204"
       - "centos7"
       - "centos-stream8"
-      # - "centos-stream9"
       - "ubi8"
-      # - "fedora34"
       - "fedora34"
       - "fedora35"
-      # - "fedora36"
+      - "fedora36"
       - "amazonlinux"
       - "rockylinux8"
       - "almalinux8"
-#  - scenario: "alternative"
-#    ansible: ["previous", "current", "next"]
-#    platforms: ["ubuntu1604", "ubuntu1804", "ubuntu2004", "centos7", "centos8"]
