Update CI for ansible DEV tests

--- a/molecule/config.yml
+++ b/molecule/config.yml
@@ -1,7 +1,7 @@
 ---
 molecule_scenarios:
   - scenario: "default"
-    ansible: ["previous", "current", "next"]
+    ansible: ["previous", "current", "development"]
     platforms:
       - "debian10"
       - "debian11"
